--- a/src/app/division/division.component.html
+++ b/src/app/division/division.component.html
@@ -1,4 +1,4 @@
-<div class="division">
+<div class="division" [class.selected]="selected">
   <div class="division-header">
     <div class="abbr">{{division.abbr}}</div>
     <div class="title">{{name}}</div>
