--- a/src/app/division/division.component.scss
+++ b/src/app/division/division.component.scss
@@ -3,6 +3,7 @@
 
 .division {
   background: #DEDEDE;
+  cursor: pointer;
   float: left;
   margin: 15px 10px;
   min-height: 200px;
@@ -10,6 +11,10 @@
   padding: 10px;
   position: relative;
   @include box-shadow(0px 3px 8px 0px rgba(0, 0, 0, 0.45));
+
+  &.selected {
+    border: 2px solid $theme-bg;
+  }
 
   .division-content {
     height: 140px;
