Minor clean-up; also added the Add button as I had forgotten it earlier!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,10 @@
     </li>
   </ul>
 </section>
+<!--Filters-->
 <div *ngIf="showFilters" class="filter-overlay" (click)="showFilters = !showFilters"></div>
 <app-filters [class.visible]="showFilters" [filters]="filters" (filterRecords)="filterRecords($event)"></app-filters>
-
+<!--Add Button-->
+<div class="fixed-action-button">
+  <span class="fa fa-plus"></span>
+</div>
